--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="author" content="Ch_Kumar" />
+    <meta name="keywords" content="Tic-Tae-Toe,game,strategy,fun,grid-crash" />
+    <meta name="description" content="This website features a game called Grid Crash, a modern take on the classic Tic-Tac-Toe, developed using Create React App." />
+    <meta name="robots" content="index, follow" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- apple-touch-icon file serves a specific purpose related to how your web application is displayed on Apple devices, particularly when users save your web app to their home screen.  -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Grid Crash</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
