chore: improved index file

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Ch_Kumar" />
-    <meta name="keywords" content="Tic-Tae-Toe,game,strategy,fun,grid-crash" />
-    <meta name="description" content="This website features a game called Grid Crash, a modern take on the classic Tic-Tac-Toe, developed using Create React App." />
+    <meta name="description" content="Play Grid Crash, the ultimate grid-based puzzle game. Challenge your mind with our fun and engaging puzzles.">
+    <meta name="keywords" content="Grid Crash, puzzle game, grid-based game, brain games, online puzzles">
     <meta name="robots" content="index, follow" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Grid Crash</title>
+    <title>Grid Crash - The Ultimate Grid-Based Puzzle Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
