--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Ch_Kumar" />
-    <meta name="description" content="Play Grid Crash, the ultimate grid-based puzzle game. Challenge your mind with our fun and engaging puzzles.">
-    <meta name="keywords" content="Grid Crash, puzzle game, grid-based game, brain games, online puzzles">
+    <meta
+      name="description"
+      content="Play Grid Crash, the ultimate grid-based puzzle game. Challenge your mind with our fun and engaging puzzles."
+    />
+    <meta
+      name="keywords"
+      content="Grid Crash, puzzle game, grid-based game, brain games, online puzzles"
+    />
     <meta name="robots" content="index, follow" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- apple-touch-icon file serves a specific purpose related to how your web application is displayed on Apple devices, particularly when users save your web app to their home screen.  -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
