chore: added application meta tag in index file

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+    <meta name="application-name" content="Grid-Crash">
+
     <!-- apple-touch-icon file serves a specific purpose related to how your web application is displayed on Apple devices, particularly when users save your web app to their home screen.  -->
     <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
