--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Ch_Kumar" />
-    <meta
-      name="description"
-      content="Play Grid Crash, the ultimate grid-based puzzle game. Challenge your mind with our fun and engaging puzzles."
-    />
-    <meta
-      name="keywords"
-      content="Grid Crash, puzzle game, grid-based game, brain games, online puzzles"
-    />
+    <meta name="description" content="Play Grid Crash, the ultimate grid-based puzzle game. Challenge your mind with our fun and engaging puzzles."/>
+    <meta name="keywords" content="Grid Crash, puzzle game, grid-based game, brain games, online puzzles"/>
     <meta name="robots" content="index, follow" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
     <meta name="application-name" content="Grid-Crash">
+    
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Grid Crash - The Ultimate Grid-Based Puzzle Game">
+    <meta property="og:description" content="Play Grid Crash, the ultimate grid-based puzzle game. Challenge your mind with our fun and engaging puzzles.">
+    <meta property="og:image" content="/logo192.png">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Preload critical resources -->
+    <link rel="prefetch" href="/logo192.png" as="image" type="image/png">
+    <link rel="prefetch" href="/manifest.json" as="fetch" crossorigin>
 
     <!-- apple-touch-icon file serves a specific purpose related to how your web application is displayed on Apple devices, particularly when users save your web app to their home screen.  -->
     <link rel="apple-touch-icon" href="/logo192.png" />
